force-app/main/default/objects/Support_Ticket_Intelligence__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName><label>Assigned To</label><referenceTo>User</referenceTo>
    <relationshipLabel>Assigned Support Tickets</relationshipLabel><relationshipName>Assigned_Support_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>