force-app/main/default/objects/Support_Ticket_Intelligence__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName><label>Contact</label><referenceTo>Contact</referenceTo>
    <relationshipLabel>Support Tickets</relationshipLabel><relationshipName>Support_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>