force-app/main/default/objects/Support_Ticket_Intelligence__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName><label>Customer</label><required>true</required>
    <referenceTo>Account</referenceTo><relationshipLabel>Support Tickets</relationshipLabel>
    <relationshipName>Support_Tickets</relationshipName><type>Lookup</type>
</CustomField>