force-app/main/default/objects/Support_Ticket_Intelligence__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName><label>Issue Type</label><type>Picklist</type>
    <valueSet><valueSetDefinition>
        <value><fullName>Technical</fullName><default>false</default><label>Technical</label></value>
        <value><fullName>Billing</fullName><default>false</default><label>Billing</label></value>
        <value><fullName>General</fullName><default>true</default><label>General</label></value>
    </valueSetDefinition></valueSet>
</CustomField>