force-app/main/default/objects/Support_Ticket_Intelligence__c/fields/Priority_Level__c.field-meta.xml
<CustomField>
    <fullName>Priority_Level__c</fullName><label>Priority Level</label><type>Picklist</type>
    <valueSet><valueSetDefinition>
        <value><fullName>Low</fullName><default>true</default><label>Low</label></value>
        <value><fullName>Medium</fullName><default>false</default><label>Medium</label></value>
        <value><fullName>High</fullName><default>false</default><label>High</label></value>
    </valueSetDefinition></valueSet>
</CustomField>