force-app/main/default/objects/Support_Ticket_Intelligence__c/fields/Resolution_Time__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Time__c</fullName><label>Resolution Time (hrs)</label><precision>8</precision><scale>2</scale><type>Number</type>
</CustomField>