force-app/main/default/objects/Support_Ticket_Intelligence__c/fields/SLA_Breach_Risk__c.field-meta.xml
<CustomField>
    <fullName>SLA_Breach_Risk__c</fullName><label>SLA Breach Risk</label><type>Checkbox</type><defaultValue>false</defaultValue>
</CustomField>